--- a/.github/workflows/test-schedulers.yml
+++ b/.github/workflows/test-schedulers.yml
@@ -16,6 +16,9 @@ jobs:
     container:
       image: nathanhess/slurm:full-root
     steps:
+      - name: setup slurm
+        run: /etc/startup.sh
+
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.ref }}
