--- a/.github/workflows/test-schedulers.yml
+++ b/.github/workflows/test-schedulers.yml
@@ -14,7 +14,7 @@ jobs:
   test-slurm:
     runs-on: ubuntu-latest
     container:
-      image: nathanhess/slurm:full-root
+      image: nathanhess/slurm:base-root
     steps:
       - name: setup slurm
         run: /etc/startup.sh
