--- a/.github/workflows/test-shells.yml
+++ b/.github/workflows/test-shells.yml
@@ -14,36 +14,38 @@ jobs:
   test-wsl:
     runs-on: windows-latest
     steps:
-
-      - uses: actions/checkout@v3
-        with:
-          ref: ${{ github.ref }}
-
-      - uses: actions/setup-python@v4
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-
-      - name: Install poetry
-        run: python -m pip install poetry==${{ env.POETRY_VERSION }}
-
-      - name: Configure poetry
-        run: |
-          poetry config virtualenvs.in-project true
-          poetry config installer.modern-installation false
-
-      - name: Cache the virtualenv
-        uses: actions/cache@v3
-        with:
-          path: ./.venv
-          key: venv-wsl-test-${{ hashFiles('**/poetry.lock') }}
-
-      - name: Install dependencies
-        run: poetry install --without dev,pyinstaller
-
       - uses: Vampire/setup-wsl@v2 # set up a `wsl-bash` shell
 
-      - name: Run WSL tests only
-        run: |
-          poetry run hpcflow config update --json shells.wsl.defaults '{\"WSL_executable\": \"wsl-bash\"}'
-          poetry run hpcflow config add-scheduler direct_posix
-          poetry run hpcflow test --wsl
+      - name: test wsl executable
+        run: wsl-bash --version
+
+      # - uses: actions/checkout@v3
+      #   with:
+      #     ref: ${{ github.ref }}
+
+      # - uses: actions/setup-python@v4
+      #   with:
+      #     python-version: ${{ env.PYTHON_VERSION }}
+
+      # - name: Install poetry
+      #   run: python -m pip install poetry==${{ env.POETRY_VERSION }}
+
+      # - name: Configure poetry
+      #   run: |
+      #     poetry config virtualenvs.in-project true
+      #     poetry config installer.modern-installation false
+
+      # - name: Cache the virtualenv
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: ./.venv
+      #     key: venv-wsl-test-${{ hashFiles('**/poetry.lock') }}
+
+      # - name: Install dependencies
+      #   run: poetry install --without dev,pyinstaller
+
+      # - name: Run WSL tests only
+      #   run: |
+      #     poetry run hpcflow config update --json shells.wsl.defaults '{\"WSL_executable\": \"wsl-bash\"}'
+      #     poetry run hpcflow config add-scheduler direct_posix
+      #     poetry run hpcflow test --wsl
