--- a/.github/workflows/test-shells.yml
+++ b/.github/workflows/test-shells.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: Vampire/setup-wsl@v2 # set up a `wsl-bash` shell
 
       - name: test wsl executable
-        run: wsl --version
+        run: wsl --status
 
       # - uses: actions/checkout@v3
       #   with:
