--- a/.github/workflows/test-shells.yml
+++ b/.github/workflows/test-shells.yml
@@ -14,10 +14,11 @@ jobs:
   test-wsl:
     runs-on: windows-latest
     steps:
-      - uses: Vampire/setup-wsl@v2 # set up a `wsl-bash` shell
+      - uses: Vampire/setup-wsl@v2 # install a WSL distribution
 
-      - name: test wsl executable
-        run: wsl --status
+      - run: wsl.exe --list
+
+      - run: wsl.exe --help
 
       # - uses: actions/checkout@v3
       #   with:
@@ -46,6 +47,6 @@ jobs:
 
       # - name: Run WSL tests only
       #   run: |
-      #     poetry run hpcflow config update --json shells.wsl.defaults '{\"WSL_executable\": \"wsl-bash\"}'
+      #     poetry run hpcflow config update --json shells.wsl.defaults '{\"WSL_executable\": \"wsl.exe\"}'
       #     poetry run hpcflow config add-scheduler direct_posix
       #     poetry run hpcflow test --wsl
