--- a/.github/workflows/test-shells.yml
+++ b/.github/workflows/test-shells.yml
@@ -1,7 +1,7 @@
 name: test-shells
 concurrency:
   | # e.g. don't run simultaneously on the same branch (since we may commit to that branch)
-  ci-${{ format('{0}github.head_ref', 'refs/heads') || github.ref }}
+  ci-test-shells-${{ format('{0}github.head_ref', 'refs/heads') || github.ref }}
 
 env:
   PYTHON_VERSION: "3.11"
