--- a/.github/workflows/test-schedulers.yml
+++ b/.github/workflows/test-schedulers.yml
@@ -1,7 +1,7 @@
 name: test-schedulers
 concurrency:
   | # e.g. don't run simultaneously on the same branch (since we may commit to that branch)
-  ci-${{ format('{0}github.head_ref', 'refs/heads') || github.ref }}
+  ci-test-schedulers-${{ format('{0}github.head_ref', 'refs/heads') || github.ref }}
 
 env:
   PYTHON_VERSION: "3.11"
@@ -85,6 +85,6 @@ jobs:
       - name: Install dependencies
         run: poetry install --without dev,pyinstaller
 
-      - name: Run slurm tests only
+      - name: Run direct-linux tests only
         run: |
-          poetry run hpcflow test --direct-linux    
+          poetry run hpcflow test --direct-linux
