--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -153,7 +153,7 @@ jobs:
         run: |
           poetry run python -m pytest --verbose --exitfirst
 
-  test-invoc-cmd:
+  test-invoc-cmd-ubuntu:
     runs-on: ubuntu-latest
     if: github.event.inputs.run_invoc_cmd_tests == 'true'
     steps:
@@ -177,14 +177,12 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ./.venv
-          key: venv-invoc-cmd-test-${{ hashFiles('**/poetry.lock') }}
+          key: venv-invoc-cmd-test-linux-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install dependencies
-        run: poetry install --without dev,pyinstaller
+        run: poetry install --without dev,pyinstaller     
 
-        # on windows: `((Get-Command python).source | Resolve-Path).Path` will normalise the path
-
-      - name: Test invocation command with `python /path/to/cli.py`
+      - name: Test invocation command with `python ./hpcflow/cli.py`      
         run: |
           source $(poetry env info --path)/bin/activate
           actual=`python ./hpcflow/cli.py internal get-invoc-cmd`
@@ -193,7 +191,7 @@ jobs:
           echo expected: $expected
           [ "$actual" = "$expected" ]
 
-      - name: Test invocation command with `python -m path.to.cli`
+      - name: Test invocation command with `python -m hpcflow.cli`      
         run: |
           source $(poetry env info --path)/bin/activate
           actual=`python -m hpcflow.cli internal get-invoc-cmd`
@@ -202,7 +200,83 @@ jobs:
           echo expected: $expected
           [ "$actual" = "$expected" ]
 
-      - name: Test invocation command with entry point script
+      - name: Test invocation command with `hpcflow` entry point script
+        run: |
+          source $(poetry env info --path)/bin/activate
+          actual=`hpcflow internal get-invoc-cmd`
+          expected="('`command -v python`', '`command -v hpcflow`')"
+          echo actual: $actual
+          echo expected: $expected
+          [ "$actual" = "$expected" ]
+
+      - name: Test invocation command with interactive python
+        run: |
+          source $(poetry env info --path)/bin/activate
+          actual=$(python ./.github/workflows/get_invoc_cmd_interactive.py python)
+          expected="('`command -v python`', '`realpath ./hpcflow/cli.py`')"
+          echo actual: $actual
+          echo expected: $expected
+          [ "$actual" = "$expected" ]
+
+      - name: Test invocation command with interactive ipython
+        run: |
+          source $(poetry env info --path)/bin/activate
+          pip install ipython
+          actual=$(python ./.github/workflows/get_invoc_cmd_interactive.py ipython)
+          expected="('`command -v python`', '`realpath ./hpcflow/cli.py`')"
+          echo actual: $actual
+          echo expected: $expected
+          [ "$actual" = "$expected" ]
+
+
+  test-invoc-cmd-macos:
+    runs-on: macos-latest
+    if: github.event.inputs.run_invoc_cmd_tests == 'true'
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.ref }}
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install poetry
+        run: python -m pip install poetry==${{ env.POETRY_VERSION }}
+
+      - name: Configure poetry
+        run: |
+          poetry config virtualenvs.in-project true
+          poetry config installer.modern-installation false
+
+      - name: Cache the virtualenv
+        uses: actions/cache@v3
+        with:
+          path: ./.venv
+          key: venv-invoc-cmd-test-macos-${{ hashFiles('**/poetry.lock') }}
+
+      - name: Install dependencies
+        run: poetry install --without dev,pyinstaller
+
+      - name: Test invocation command with `python ./hpcflow/cli.py`
+        run: |
+          source $(poetry env info --path)/bin/activate
+          actual=`python ./hpcflow/cli.py internal get-invoc-cmd`
+          expected="('`command -v python`', '`realpath ./hpcflow/cli.py`')"
+          echo actual: $actual
+          echo expected: $expected
+          [ "$actual" = "$expected" ]
+
+      - name: Test invocation command with `python -m hpcflow.cli`
+        run: |
+          source $(poetry env info --path)/bin/activate
+          actual=`python -m hpcflow.cli internal get-invoc-cmd`
+          expected="('`command -v python`', '`realpath ./hpcflow/cli.py`')"
+          echo actual: $actual
+          echo expected: $expected
+          [ "$actual" = "$expected" ]
+
+      - name: Test invocation command with `hpcflow` entry point script
         run: |
           source $(poetry env info --path)/bin/activate
           actual=`hpcflow internal get-invoc-cmd`
