--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -180,13 +180,15 @@ jobs:
           key: venv-invoc-cmd-test-linux-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install dependencies
-        run: poetry install --without dev,pyinstaller     
+        run: |
+          poetry install --without dev,pyinstaller     
+          poetry run pip install ipython
 
       - name: Test invocation command with `python ./hpcflow/cli.py`      
         run: |
           source $(poetry env info --path)/bin/activate
           actual=`python ./hpcflow/cli.py internal get-invoc-cmd`
-          expected="('`command -v python`', '`realpath ./hpcflow/cli.py`')"
+          expected="('`command -v python`', '$GITHUB_WORKSPACE/hpcflow/cli.py')"
           echo actual: $actual
           echo expected: $expected
           [ "$actual" = "$expected" ]
@@ -195,7 +197,7 @@ jobs:
         run: |
           source $(poetry env info --path)/bin/activate
           actual=`python -m hpcflow.cli internal get-invoc-cmd`
-          expected="('`command -v python`', '`realpath ./hpcflow/cli.py`')"
+          expected="('`command -v python`', '$GITHUB_WORKSPACE/hpcflow/cli.py')"
           echo actual: $actual
           echo expected: $expected
           [ "$actual" = "$expected" ]
@@ -213,7 +215,7 @@ jobs:
         run: |
           source $(poetry env info --path)/bin/activate
           actual=$(python ./.github/workflows/get_invoc_cmd_interactive.py python)
-          expected="('`command -v python`', '`realpath ./hpcflow/cli.py`')"
+          expected="('`command -v python`', '$GITHUB_WORKSPACE/hpcflow/cli.py')"
           echo actual: $actual
           echo expected: $expected
           [ "$actual" = "$expected" ]
@@ -221,13 +223,11 @@ jobs:
       - name: Test invocation command with interactive ipython
         run: |
           source $(poetry env info --path)/bin/activate
-          pip install ipython
           actual=$(python ./.github/workflows/get_invoc_cmd_interactive.py ipython)
-          expected="('`command -v python`', '`realpath ./hpcflow/cli.py`')"
+          expected="('`command -v python`', '$GITHUB_WORKSPACE/hpcflow/cli.py')"
           echo actual: $actual
           echo expected: $expected
           [ "$actual" = "$expected" ]
-
 
   test-invoc-cmd-macos:
     runs-on: macos-latest
@@ -256,7 +256,9 @@ jobs:
           key: venv-invoc-cmd-test-macos-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install dependencies
-        run: poetry install --without dev,pyinstaller
+        run: |
+          poetry install --without dev,pyinstaller
+          poetry run pip install ipython
 
       - name: Test invocation command with `python ./hpcflow/cli.py`
         run: |
@@ -297,9 +299,46 @@ jobs:
       - name: Test invocation command with interactive ipython
         run: |
           source $(poetry env info --path)/bin/activate
-          pip install ipython
           actual=$(python ./.github/workflows/get_invoc_cmd_interactive.py ipython)
           expected="('`command -v python`', '$GITHUB_WORKSPACE/hpcflow/cli.py')"
           echo actual: $actual
           echo expected: $expected
           [ "$actual" = "$expected" ]
+
+  test-invoc-cmd-windows:
+    runs-on: windows-latest
+    if: github.event.inputs.run_invoc_cmd_tests == 'true'
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.ref }}
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install poetry
+        run: python -m pip install poetry==${{ env.POETRY_VERSION }}
+
+      - name: Configure poetry
+        run: |
+          poetry config virtualenvs.in-project true
+          poetry config installer.modern-installation false
+
+      - name: Cache the virtualenv
+        uses: actions/cache@v3
+        with:
+          path: ./.venv
+          key: venv-invoc-cmd-test-win-${{ hashFiles('**/poetry.lock') }}
+
+      - name: Install dependencies
+        run: |
+          poetry install --without dev,pyinstaller
+
+      - name: Test invocation command with `python ./hpcflow/cli.py`
+        run: |
+          ."$(poetry env info --path)\Scripts\activate.ps1"
+          $actual = $(`python ./hpcflow/cli.py internal get-invoc-cmd`)
+          $expected = "('" + ((Get-Command python).source | Resolve-Path).Path + "', '$GITHUB_WORKSPACE\hpcflow\cli.py')"
+          Write-Host actual: $actual
+          Write-Host expected: $expected
