fix(GHA): testing

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -338,7 +338,7 @@ jobs:
       - name: Test invocation command with `python ./hpcflow/cli.py`
         run: |
           ."$(poetry env info --path)\Scripts\activate.ps1"
-          $actual = $(`python ./hpcflow/cli.py internal get-invoc-cmd`)
+          $actual = $(python ./hpcflow/cli.py internal get-invoc-cmd)
           $expected = "('" + ((Get-Command python).source | Resolve-Path).Path + "', '$GITHUB_WORKSPACE\hpcflow\cli.py')"
           Write-Host actual: $actual
           Write-Host expected: $expected
